--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 
 body{
   background-color: #ECE5DD;
-  background-image: url('./background.png');
+  background-image: url('./img/background.png');
   background-size: contain;
   background-attachment: fixed;
 }
@@ -34,6 +34,7 @@ body{
 .title-container{
   width: 100%;
   text-align: center;
+  margin: 0 10px;
   margin-bottom: 20px;
   font-size: 50px;
   color: #000000;
